using System;
using System.Collections.Generic;
using System.Text;

public class VictoryTypeStat
{
    public string Agent { get; set; }
    public TypZwyciestwa TypZwyciestwa { get; set; }
    public int Liczba { get; set; }
}